# keybuddy

./: .gitignore  80-keypad.rules  Cargo.toml  README.md
src/: config.rs  key_codes.rs  key_reader.rs  key_tree.rs  main.rs  xinput.rs
