[package]
name = "keybuddy"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
argparse = "0.2.2"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
indextree = "4.6.0"
quoted-string = "0.6.1"
regex = "1.10.3"
shlex = "1.3.0"
tokio = { version = "1.36.0", features = ["full"] }
